[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/karakter/Character-sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Karakter.gd" type="Script" id=2]
[ext_resource path="res://scenes/weapon_scenes/NoWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/karakter_scripts/WeaponHandler.gd" type="Script" id=4]

[sub_resource type="PhysicsMaterial" id=48]
friction = 0.0
rough = true

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "DEATH",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "WALK",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=46]
radius = 24.0

[node name="Karakter" type="RigidBody2D"]
z_index = 5
mode = 2
physics_material_override = SubResource( 48 )
can_sleep = false
linear_damp = 10.0
script = ExtResource( 2 )

[node name="KarakterSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 54 )
animation = "IDLE"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="IllegalMoveCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IllegalMoveCheck"]
position = Vector2( 0, 8 )
shape = SubResource( 46 )

[node name="WeaponHandler" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="NoWeapon" parent="WeaponHandler" instance=ExtResource( 3 )]
